# platform_external_iptables

./: .gitignore  Android.bp  Android.mk  METADATA  Makefile.am  OWNERS  README.version  TEST_MAPPING  config.h  configure.ac  ip6tables-restore.c  iptables-test.py  iptables.c  xlate-test.py  xtables.c  xtoptions.c
.github/workflows/: azure.yml
extensions/: Android.bp  Android.mk  GNUmakefile.in  create_initext  gen_init  generic.txlate  initext.c  iptables.t  libarpt_CLASSIFY.t  libarpt_MARK.t  libarpt_mangle.c  libarpt_mangle.t  libarpt_standard.t  libebt_802_3.c  libebt_802_3.t  libebt_among.c  libebt_among.t  libebt_arp.c  libebt_arp.t  libebt_arpreply.c  libebt_arpreply.t  libebt_dnat.c  libebt_dnat.t  libebt_dnat.txlate  libebt_ip.c  libebt_ip.t  libebt_ip.txlate  libebt_ip6.c  libebt_ip6.t  libebt_ip6.txlate  libebt_limit.c  libebt_log.c  libebt_log.t  libebt_mark.c  libebt_mark.txlate  libebt_mark_m.c  libebt_mark_m.t  libebt_mark_m.txlate  libebt_nflog.c  libebt_pkttype.c  (+240 more)
include/: Makefile.am  xtables.h  xtables.h.in
include/ebtables/: ethernetdb.h
include/iptables/: internal.h
include/linux/: netfilter.h  types.h
include/linux/netfilter/: xt_IDLETIMER.h  xt_cgroup.h  xt_quota.h
include/linux/netfilter_ipv4/: ip_tables.h  ipt_2ecn.h
include/linux/netfilter_ipv6/: ip6_tables.h  ip6t_srh.h
iptables/: .gitignore  Android.bp  Android.mk  Makefile.am  arptables-nft-restore.8  arptables-nft-save.8  arptables-nft.8  ebtables-nft.8  ip6tables-restore.c  ip6tables-save.c  ip6tables.c  iptables-apply  iptables-apply.8.in  iptables-restore.8.in  iptables-restore.c  iptables-save.8.in  iptables-save.c  iptables-standalone.c  iptables-xml.c  iptables.8.in  iptables.c  nft-arp.c  nft-arp.h  nft-bridge.c  nft-bridge.h  nft-cache.c  nft-cache.h  nft-cmd.c  nft-cmd.h  nft-ipv4.c  nft-ipv6.c  nft-ruleparse-arp.c  nft-ruleparse-bridge.c  nft-ruleparse-ipv4.c  nft-ruleparse-ipv6.c  nft-ruleparse.c  nft-ruleparse.h  nft-shared.c  nft-shared.h  nft.c  (+23 more)
iptables/tests/shell/: run-tests.sh
iptables/tests/shell/testcases/arptables/: 0001-arptables-save-restore_0  0002-arptables-restore-defaults_0  0003-arptables-verbose-output_0
iptables/tests/shell/testcases/chain/: 0001duplicate_1  0002duplicate_0  0003duplicate_1  0004extra-base_0  0004newchain_0  0004rename_0  0005rename_1
iptables/tests/shell/testcases/ebtables/: 0001-ebtables-basic_0  0002-ebtables-save-restore_0  0003-ebtables-restore-defaults_0  0004-save-counters_0  0005-ifnamechecks_0  0007-chain-policies_0  0008-ebtables-among_0  0010-change-counters_0
iptables/tests/shell/testcases/firewalld-restore/: 0001-firewalld_0
iptables/tests/shell/testcases/ip6tables/: 0002-verbose-output_0  0004-return-codes_0
iptables/tests/shell/testcases/ipt-restore/: 0001load-specific-table_0  0003-restore-ordering_0  0004-restore-race_0  0009-table-name-comment_0  0010-noflush-new-chain_0  0011-noflush-empty-line_0  0014-verbose-restore_0  0016-concurrent-restores_0
iptables/tests/shell/testcases/ipt-save/: 0001load-dumps_0
iptables/tests/shell/testcases/iptables/: 0002-verbose-output_0  0003-list-rules_0  0004-return-codes_0  0005-delete-rules_0  0008-unprivileged_0  0010-wait_0
iptables/tests/shell/testcases/nft-only/: 0001compat_0  0002invflags_0  0003delete-with-comment_0  0009-needless-bitwise_0  0010-iptables-nft-save.txt  0010-native-delinearize_0  0011-compat-mode_0  0012-xtables-monitor_0
libipq/: Makefile.am
libiptc/: Android.bp  Android.mk  Makefile.am  libip4tc.c  libip6tc.c  libiptc.c
libxtables/: Android.bp  Android.mk  Makefile.am  getethertype.c  xtables.c  xtoptions.c
utils/: .gitignore  Makefile.am  nfnl_osf.8.in  nfnl_osf.c
